[package]
name = "tokio-chat-client"
version = "0.2.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
edition = "2018"

[dependencies]
cursive = "0.3.7"
unicode-width = "0.1"
futures = "0.1"
tokio-core = "0.1"
tokio-codec = "0.1"
tokio = "0.1"
tokio-chat-common = { path = "../tokio-chat-common" }
