[package]
name = "tokio-chat-common"
version = "0.2.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.24"
tokio-codec = "0.1.0"
futures = "0.1"
tokio = "0.1.7"
tokio-jsoncodec = "0.1"
