[package]
name = "tokio-chat-server"
version = "0.2.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-core = "0.1"
byteorder = "1.0"
tokio-chat-common = { path = "../tokio-chat-common" }
